--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row no-gutters">
             <div class= "header col-10 col-lg-9 m-auto" >
 
-              <h1><img src="images/mainimage.jpg" alt="まごころと優しさを大切に ネストクリニック"></h1>
+              <h1><img src="images/logo.png" alt="まごころと優しさを大切に ネストクリニック"></h1>
 
 
               <nav>
