--- a/index.html
+++ b/index.html
@@ -1,93 +1,109 @@
-<html>
-  <head>
-<link rel="stylesheet" href="stylesheet.css">
-    <meta charset="utf-8">
-    <title>Progate</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
-    <!-- BootstrapのCSS読み込み -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- jQuery読み込み -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- BootstrapのJS読み込み -->
-    <script src="js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <div class="container-fluid">
-        <div class="row no-gutters">
-            <div class= "header col-10 col-lg-9 m-auto" >
+<!DOCTYPE html>
+<html lang="ja">
 
-              <h1><img src="images/logo.png" alt="まごころと優しさを大切に ネストクリニック"></h1>
+<head>
+	<meta charset="UTF-8">
+	<title>ネストクリニック 丨 まごころと優しさを大切に</title>
+	<meta name="description" content="まごころと優しさをモットーに患者さんに寄り添った施術を。清潔感溢れるクリニックです。">
+	<meta name="keywords" content="ネストクリニック,病院">
 
+	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+</head>
 
-              <nav>
-                <ul>
-                  <li><a href="#">ネストクリニックについて</a></li>
-                  <li><a href="#">担当医の紹介</a></li>
-                  <li><a href="#">医院内の紹介</a></li>
-                  <li><a href="#">アクセス</a></li>
-                  <div class="clearfix"></div>
-                </ul>
-              </nav>
+<body>
 
-              <div class="clearfix"></div>
-            </div>
+<!-- #wrapper ここから -->
+<div id="wrapper">
 
-            <div class= "main col-10 col-lg-9" ></div>
+	<!-- header ここから -->
+	<header>
+		<h1><img src="images/logo.png" alt="まごころと優しさを大切に ネストクリニック"></h1>
 
-              <div class="col-lg-9  col-10  main2 ">
+		<nav>
+			<ul>
+				<li><a href="#">ネストクリニックについて</a></li>
+				<li><a href="#">担当医の紹介</a></li>
+				<li><a href="#">医院内の紹介</a></li>
+				<li><a href="#">アクセス</a></li>
+				<div class="clearfix"></div>
+			</ul>
+		</nav>
+
+	</header>
+	<!-- header ここまで -->
 
 
-
-                <div class="left">
-                  <ul>
-              			<li><a id="icon_tel"  class="img" href="#">お電話でのご予約はこちら</a></li>
-              			<li><a id="icon_blog"class="img" href="#">院長のブログ</a></li>
-              			<li><a id="icon_voice"class="img" href="#">お客様の声</a></li>
-              		</ul>
-                  </div>
+	<!-- #mainimage ここから -->
+	<div id="mainimage">
+		<img src="images/mainimage.jpg" alt="メイン画像" class="aaa">
+	</div>
+	<!-- #mainimage ここまで -->
 
 
 
-                <div class="right">
-                  <h2>お知らせ</h2>
-              		<dl>
-                    <div class="main2a">
-              			<dt>2014.12.12</dt>
-              			<dd>ネストクリニック10周年記念コンサートのおしらせ</dd>
-                  </div>
-                  <div class="main2a">
-              			<dt>2014.12.12</dt>
-              			<dd>平和記念図書館の開館日変更についてのおしらせ</dd>
-                      </div>
-                      <div class="main2a">
-              			<dt>2014.12.12</dt>
-              			<dd>年末年始も休まず営業します</dd>
-                      </div>
-                      <div class="main2a">
-              			<dt>2014.12.12</dt>
-              			<dd>募金活動の結果</dd>
-                      </div>
-                      <div class="main2a">
-              			<dt>2014.12.12</dt>
-              			<dd>元気が出る珈琲試飲会のおしらせ</dd>
-              			  </div>
-              		</dl>
-                </div>
-                <div class="clearfix"></div>
+<div id="main2">
+	<div id="left">
+		<ul>
+			<li><a id="icon_tel" href="#">お電話でのご予約はこちら</a></li>
+			<li><a id="icon_blog" href="#">院長のブログ</a></li>
+			<li><a id="icon_voice" href="#">お客様の声</a></li>
+		</ul>
+	</div>
+	<div id="right">
+		<h2>お知らせ</h2>
+		<dl>
+			<div class="list">
+			<dt>2014.12.12</dt>
+			<dd>ネストクリニック10周年記念コンサートのおしらせ</dd>
+			</div>
+			<div class="list">
+			<dt>2014.12.12</dt>
+			<dd>平和記念図書館の開館日変更についてのおしらせ</dd>
+			</div>
+			<div class="list">
+			<dt>2014.12.12</dt>
+			<dd>年末年始も休まず営業します</dd>
+			</div>
+			<div class="list">
+			<dt>2014.12.12</dt>
+			<dd>募金活動の結果</dd>
+			</div>
+			<div class="list">
+			<dt>2014.12.12</dt>
+			<dd>元気が出る珈琲試飲会のおしらせ</dd>
+			</div>
+		</dl>
+	</div>
+	</div>
+	<!-- #right ここまで -->
+</div>
+<!-- #wrapper ここまで -->
 
 
+<!-- footer ここから -->
+<footer>
 
-               </div>
-
-            </div>
-            </div>
-
+	<div id="footer_inner">
 
 
+		<p id="footer_logo">
+			<img src="images/logo_footer.png" alt="まごころと優しさを大切に ネストクリニック">
+		</p>
+
+		<ul>
+			<li><a href="#">ネストクリニックについて</a></li>
+			<li><a href="#">担当医の紹介</a></li>
+			<li><a href="#">医院内の紹介</a></li>
+			<li><a href="#">アクセス</a></li>
+
+		</ul>
 
 
-  </body>
+	</div>
+
+</footer>
+<!-- footer ここまで -->
+
+</body>
+
 </html>
